Hey if you are here then this file is so that I just remember what I added lol

1.6

----------------

Added an ".addItemFlag(ItemFlag)" to the ItemBuilder.
Added a ".removeItemFlag(ItemFlag)" to the ItemBuilder.
Added a ".setUnbreakable(true/false)" to the ItemBuilder.
Added a ".removeEnchantment" to the ItemBuilder.

Changed the pom.xml to 1.6 (obviously)

----------------

Removed the getUUID class and transfeted it to "getPlayerData.java" class...
Added a "getPlayerEconomyData.java" class
Removed the Useful package
